--- a/app/views/blogs/index.erb
+++ b/app/views/blogs/index.erb
@@ -6,7 +6,8 @@
   </head>
   <body>
     <% @blogs.each do |blog| %>
-      <h4><a href="/blogs/<%= blog.id %>"><%= blog.title %> </a></h4>
+      <h3><a href="/blogs/<%= blog.id %>"><%= blog.title %></a></h3>
+      <p> <a href="/users/<%= blog.user.id %>" style="color: black">Posted by: <%= blog.user.user_name %></a></p>
     <% end %>
   </body>
 </html>
