--- a/app/views/blogs/show.erb
+++ b/app/views/blogs/show.erb
@@ -8,5 +8,27 @@
     <h1><%= @blog.title%></h1>
     <h4>Posted By: <a href="/users/<%= @blog.user.id%>"> <%= @blog.user.user_name %></a></h4>
     <p> <%= @blog.content %> </p>
+
+    <p>
+    <form action="/blogs/<%= @blog.id %>" method="post">
+      <input id="hidden" type="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete">
+    </form>
+    </p>
+    <p>
+    <form action="/blogs/<%= @blog.id %>/edit" method="get">
+      <input type="submit" value="Edit">
+    </form>
+    </p>
+
+    <% @blog.comments.each do |comment| %>
+      <p><%= comment.content %> </p>
+    <% end %>
+
+    <form action="/blogs/<%= @blog.id %>/comment" method="post">
+      <textarea name="comment[content]" style="width:250px;height:150px;" > </textarea>
+    </br>
+      <input type="submit" value="post" class="btn btn-primary">
+    </form>
   </body>
 </html>
