--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -6,8 +6,12 @@
   </head>
   <body>
     <h2>Sign up</h2>
-    <form  action="" method="post">
-
+    <form  action="/resgistrations" method="post">
+      <label>Name:</label><input type="text" name="user[name]" value="">
+      <label>UserName:</label><input type="text" name="user[user_name]" value="">
+      <label>Email</label><input type="text" name="user[email]" value="">
+      <label>Password</label><input type="text" name="user[password]" value="">
+      <p><input type="submit" name="" value="Sign up" class="btn btn-primary"></p>
     </form>
   </body>
 </html>
