Made the characters in the password field hidden

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -10,7 +10,7 @@
       <label>Name:</label><input type="text" name="user[name]" value="">
       <label>UserName:</label><input type="text" name="user[user_name]" value="">
       <label>Email</label><input type="text" name="user[email]" value="">
-      <label>Password</label><input type="text" name="user[password]" value="">
+      <label>Password</label><input type="password" name="user[password]" value="">
       <p><input type="submit" name="" value="Sign up" class="btn btn-primary"></p>
     </form>
   </body>
