Finished implementing auth, need to make nav bar change based on loggedin/loggedout state but couldn't get that to work

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,9 @@
       <ul class="nav nav-tabs">
         <li role="presentation"><a href="/users">All Users</a></li>
         <li role="presentation"><a href="/blogs">All Posts</a></li>
+          <li role="presentation"><a href="/logout">Logout</a></li>
+          <li role="presentation"><a href="/login">Login</a></li>
+          <li role="presentation"><a href="/signup">Sign up</a></li>
       </ul>
       <div class="row">
         <%= yield %>
