--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -13,5 +13,6 @@
       <label>Password</label><input type="password" name="user[password]" value="">
       <p><input type="submit" name="" value="Sign up" class="btn btn-primary"></p>
     </form>
+    <a href="/login">Log in</a>
   </body>
 </html>
