--- a/app/views/blogs/show.erb
+++ b/app/views/blogs/show.erb
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= @blog.title%></h1>
+    <h6><%= @blog.vote_count %></h6>
     <h4>Posted By: <a href="/users/<%= @blog.user.id%>"> <%= @blog.user.user_name %></a></h4>
     <p> <%= @blog.content %> </p>
 
@@ -20,7 +21,10 @@
       <input type="submit" value="Edit">
     </form>
     </p>
-
+    <p>
+    <a href="/blogs/<%= @blog.id %>/countup" ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Green-Up-Arrow.svg/2000px-Green-Up-Arrow.svg.png" alt="Smiley face" height="20" width="20"></a>
+    <a href="/blogs/<%= @blog.id %>/countdown" ><img src="https://openclipart.org/image/2400px/svg_to_png/165169/arrowdownred.png" alt="Smiley face" height="20" width="20"></a>
+    </p>
     <% @blog.comments.each do |comment| %>
       <p><%= comment.content %> </p>
     <% end %>
