--- a/app/views/blogs/index.erb
+++ b/app/views/blogs/index.erb
@@ -6,9 +6,10 @@
   </head>
   <body>
     <% @blogs.each do |blog| %>
-      <h3><%= blog.vote_count %><a href="/blogs/<%= blog.id %>"><%= blog.title %></a></h3>
-      <p> <a href="/users/<%= blog.user.id %>" style="color: black">Posted by: <%= blog.user.user_name %></a></p>
-
+      <div class="well">
+        <h5><%= blog.vote_count %></h5>  <h3><a href="/blogs/<%= blog.id %>"><%= blog.title %></a></h3>
+        <p> <a href="/users/<%= blog.user.id %>" style="color: black">Posted by: <%= blog.user.user_name %></a></p>
+      </div>
     <% end %>
   </body>
 </html>
