Added more wells and each blogs karma count to user page

--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -6,7 +6,9 @@
   </head>
   <body>
     <% User.all.each do |user| %>
+    <div class="well">
       <h1> Post-iter: <a href="/users/<%= user.id %>"><%= user.name %> </a> </h1>
+    </div>
     <% end %>
   </body>
 </html>
