--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -5,14 +5,18 @@
     <title><%= @user.name %>'s Profile</title>
   </head>
   <body>
-    <h3> Name: <%= @user.name%> </h3>
-    <h3> Email: <%= @user.email%> </h3>
-    <h3> Username: <%= @user.user_name%> </h3>
-    <h3> Total Karma: <%= @karma %> </h3>
+    <div class="well">
+      <h3> Name: <%= @user.name%> </h3>
+      <h3> Email: <%= @user.email%> </h3>
+      <h3> Username: <%= @user.user_name%> </h3>
+      <h3> Total Karma: <%= @karma %> </h3>
+    </div>
   </br>
   <h2>Your Blog Posts</h2>
     <% @user.blogs.each do |blog| %>
-      <p><a href="/blogs/<%= blog.id %>"><%= blog.title %></a></p>
+      <div class="well">
+        <p><%= blog.vote_count %>  <a href="/blogs/<%= blog.id %>"><%= blog.title %></a></p>
+      </div>
     <% end %>
     <h4><a href="/blogs/new">Make a new blog post</a></h4>
   </body>
