--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,7 @@
     <title></title>
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <script src="/js/bootstrap.js"></script>
     <style>
       body {
       background-image:url('images/img/topography.png');
