--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -5,14 +5,16 @@
     <title>Sign up for Post-it</title>
   </head>
   <body>
-    <h2>Sign up</h2>
-    <form  action="/resgistrations" method="post">
-      <label>Name:</label><input type="text" name="user[name]" value="">
-      <label>UserName:</label><input type="text" name="user[user_name]" value="">
-      <label>Email</label><input type="text" name="user[email]" value="">
-      <label>Password</label><input type="password" name="user[password]" value="">
-      <p><input type="submit" name="" value="Sign up" class="btn btn-primary"></p>
-    </form>
-    <a href="/login">Log in</a>
+    <div class="well">
+      <h2>Sign up</h2>
+      <form  action="/resgistrations" method="post">
+        <label>Name:</label><input type="text" name="user[name]" value="">
+        <label>UserName:</label><input type="text" name="user[user_name]" value="">
+        <label>Email</label><input type="text" name="user[email]" value="">
+        <label>Password</label><input type="password" name="user[password]" value="">
+        <p><input type="submit" name="" value="Sign up" class="btn btn-primary"></p>
+      </form>
+      <a href="/login">Log in</a>
+    <div class="well">
   </body>
 </html>
