--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,7 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
+        <!-- <li role="presentation"><a href="/"><img src="images/logo.png" alt="logo" height="100" width="100"></a></li> -->
         <li role="presentation"><a href="/users">All Users</a></li>
         <li role="presentation"><a href="/blogs">All Posts</a></li>
         <% if session[:id] %>
