--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-    <script src="/js/bootstrap.js"></script>
+    <link href="/stylesheets/css/bootstrap.css" rel="stylesheet">
+    <link href="/stylesheets/css/bootstrap-responsive.css" rel="stylesheet">
+    <script src="/stylesheets/js/bootstrap.js"></script>
     <style>
       body {
       background-image:url('images/img/topography.png');
