fixed all paths

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
     <script src="/stylesheets/js/bootstrap.js"></script>
     <style>
       body {
-      background-image:url('images/img/topography.png');
+      background-image:url('/images/img/topography.png');
       }
     </style>
   </head>
